fixed styling issues with editor (wordwrap, no gutterspace, no margin)

--- a/client/src/pages/about/aboutpage.css
+++ b/client/src/pages/about/aboutpage.css
@@ -13,7 +13,7 @@
 
 }
 
-a{
+#teamName{
 	color: #ffc107;
       -webkit-text-stroke: 1px black;
     text-shadow:
